--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -8,63 +8,52 @@
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIcons</key>
+		<key>CFBundleAlternateIcons</key>
 		<dict>
-			<key>CFBundleAlternateIcons</key>
-			<dict>
-				<key>Computer</key>
-				<dict>
-					<key>CFBundleIconFiles</key>
-					<array>
-						<string>AppIcon5</string>
-					</array>
-					<key>UIPrerenderedIcon</key>
-					<false/>
-				</dict>
-				<key>Dev</key>
-				<dict>
-					<key>CFBundleIconFiles</key>
-					<array>
-						<string>AppIcon1</string>
-					</array>
-					<key>UIPrerenderedIcon</key>
-					<false/>
-				</dict>
-				<key>Full</key>
-				<dict>
-					<key>CFBundleIconFiles</key>
-					<array>
-						<string>AppIcon4</string>
-					</array>
-					<key>UIPrerenderedIcon</key>
-					<false/>
-				</dict>
-				<key>Matte</key>
-				<dict>
-					<key>CFBundleIconFiles</key>
-					<array>
-						<string>AppIcon2</string>
-					</array>
-					<key>UIPrerenderedIcon</key>
-					<false/>
-				</dict>
-				<key>Rainbow</key>
-				<dict>
-					<key>CFBundleIconFiles</key>
-					<array>
-						<string>AppIcon3</string>
-					</array>
-					<key>UIPrerenderedIcon</key>
-					<false/>
-				</dict>
-			</dict>
-			<key>CFBundlePrimaryIcon</key>
+			<key>AppIcon 1</key>
 			<dict>
 				<key>CFBundleIconFiles</key>
 				<array>
-					<string>AppIcon</string>
+					<string>AppIcon 1</string>
 				</array>
 				<key>UIPrerenderedIcon</key>
-				<false />
+				<false/>
+			</dict>
+			<key>AppIcon 2</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>AppIcon 2</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>AppIcon 3</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>AppIcon 3</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>AppIcon 4</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>AppIcon 4</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
+			</dict>
+			<key>AppIcon 5</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>AppIcon 5</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false/>
 			</dict>
 		</dict>
 		<key>CFBundleIdentifier</key>
