--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@tiptap/extension-text-style": "^2.11.5",
     "@tiptap/extension-typography": "^2.8.0",
     "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/extensions": "^3.0.7",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.1.13",
