--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "@capacitor/haptics": "^7.0.0",
     "@capacitor/ios": "^7.0.0",
     "@capacitor/keyboard": "^7.0.0",
-    "@capacitor/preferences": "^7.0.0",
+    "@capacitor/preferences": "^7.0.2",
     "@capacitor/share": "^7.0.0",
     "@capacitor/splash-screen": "^7.0.0",
     "@capgo/capacitor-native-biometric": "^7.1.7",
     "@daniele-rolli/capacitor-google-auth": "^3.4.0-rc.6",
+    "@daniele-rolli/capacitor-spotsearch": "^0.0.2",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.1.1",
     "@recognizebv/capacitor-plugin-msauth": "^3.6.0",
     "@sereneinserenade/tiptap-search-and-replace": "^0.1.1",
@@ -92,7 +97,9 @@
     "dayjs": "^1.11.10",
     "dompurify": "^3.1.5",
     "dropbox": "^10.34.0",
+    "emoji.json": "^16.0.0",
     "eslint-config-react-app": "^7.0.1",
+    "from": "^0.1.7",
     "highlight.js": "^11.9.0",
     "katex": "0.13.0",
     "lowlight": "2.9.0",
@@ -109,6 +116,9 @@
     "prosemirror-state": "^1.4.3",
     "prosemirror-utils": "^1.2.2",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-portal-overlay": "^1.1.0",
     "react-router-dom": "6",
