--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/splash-screen": "^7.0.0",
     "@capgo/capacitor-native-biometric": "^7.1.7",
     "@daniele-rolli/capacitor-google-auth": "^3.4.0-rc.6",
+    "@daniele-rolli/capacitor-scoped-storage": "^0.0.2",
     "@daniele-rolli/capacitor-spotsearch": "^0.0.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
