chore(sdk): compile agains 35

--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -1,16 +1,17 @@
 ext {
     minSdkVersion = 26
-    compileSdkVersion = 36
-    targetSdkVersion = 36
+    compileSdkVersion = 35
+    targetSdkVersion = 35
+
     androidxActivityVersion = '1.9.2'
     androidxAppCompatVersion = '1.7.0'
     androidxCoordinatorLayoutVersion = '1.2.0'
-    androidxCoreVersion = '1.15.0'
-    androidxFragmentVersion = '1.8.4'
-    coreSplashScreenVersion = '1.0.1'
-    androidxWebkitVersion = '1.12.1'
+    androidxCoreVersion = '1.13.1'
+    androidxFragmentVersion = '1.8.2'
+    coreSplashScreenVersion = '1.1.0-rc01'
+    androidxWebkitVersion = '1.11.0'
     junitVersion = '4.13.2'
     androidxJunitVersion = '1.2.1'
     androidxEspressoCoreVersion = '3.6.1'
-    cordovaAndroidVersion = '10.1.1'
+    cordovaAndroidVersion = '12.0.1'
 }
