--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation project(':capacitor-preferences')
     implementation project(':capacitor-share')
     implementation project(':capacitor-splash-screen')
+    implementation project(':capacitor-status-bar')
     implementation project(':capawesome-capacitor-android-edge-to-edge-support')
     implementation project(':capgo-capacitor-native-biometric')
     implementation project(':daniele-rolli-capacitor-google-auth')
