--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -21,6 +21,7 @@ def capacitor_pods
   pod 'CapacitorPreferences', :path => '../../node_modules/@capacitor/preferences'
   pod 'CapacitorShare', :path => '../../node_modules/@capacitor/share'
   pod 'CapacitorSplashScreen', :path => '../../node_modules/@capacitor/splash-screen'
+  pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
   pod 'CapgoCapacitorNativeBiometric', :path => '../../node_modules/@capgo/capacitor-native-biometric'
   pod 'DanieleRolliCapacitorGoogleAuth', :path => '../../node_modules/@daniele-rolli/capacitor-google-auth'
   pod 'DanieleRolliCapacitorScopedStorage', :path => '../../../capacitor-scoped-storage'
