--- a/package.json
+++ b/package.json
@@ -114,12 +114,14 @@
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-scrolling": "^1.3.10",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-portal-overlay": "^1.1.0",
     "react-router-dom": "6",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.5.0",
+    "react-use-gesture": "^9.1.3",
     "remixicon-react": "^1.0.0",
     "sass": "^1.77.2",
     "send-intent": "^6.0.2",
