(fix/deps): UI improvements removed headless-ui

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@daniele-rolli/capacitor-google-auth": "^3.4.0-rc.6",
     "@daniele-rolli/capacitor-scoped-storage": "^0.0.2",
     "@daniele-rolli/capacitor-spotsearch": "^0.0.3",
-    "@headlessui/react": "^2.1.1",
     "@recognizebv/capacitor-plugin-msauth": "^3.6.0",
     "@sereneinserenade/tiptap-search-and-replace": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
@@ -88,6 +87,7 @@
     "capacitor-secure-storage-plugin": "^0.10.0",
     "capacitor-voice-recorder": "^5.0.0",
     "capacitor-webview-print": "^6.0.1",
+    "clsx": "^2.1.1",
     "crypto-es": "^2.1.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.10",
