--- a/package.json
+++ b/package.json
@@ -39,42 +39,42 @@
     "@sereneinserenade/tiptap-search-and-replace": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tippyjs/react": "^4.2.6",
+    "@tiptap/core": "^3",
     "@tiptap/extension-blockquote": "^2.1.13",
-    "@tiptap/extension-bubble-menu": "^2.2.4",
+    "@tiptap/extension-bubble-menu": "^3.10.5",
     "@tiptap/extension-bullet-list": "^2.2.4",
     "@tiptap/extension-code": "^2.1.13",
-    "@tiptap/extension-code-block": "^2.1.13",
+    "@tiptap/extension-code-block": "^3.10.5",
     "@tiptap/extension-code-block-lowlight": "^2.7.4",
     "@tiptap/extension-color": "^2.11.5",
     "@tiptap/extension-document": "^2.1.13",
     "@tiptap/extension-gapcursor": "^2.5.7",
-    "@tiptap/extension-heading": "^2.5.4",
-    "@tiptap/extension-highlight": "^2.1.13",
+    "@tiptap/extension-heading": "^2.4.0",
+    "@tiptap/extension-highlight": "^2.1.16",
     "@tiptap/extension-history": "^2.11.5",
-    "@tiptap/extension-image": "^2.4.0",
-    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-image": "^3.10.5",
+    "@tiptap/extension-link": "^2.1.16",
     "@tiptap/extension-list-item": "^2.1.13",
-    "@tiptap/extension-mention": "2.1.13",
-    "@tiptap/extension-ordered-list": "^2.1.13",
+    "@tiptap/extension-mention": "^2.1.16",
+    "@tiptap/extension-ordered-list": "^3.10.5",
     "@tiptap/extension-paragraph": "^2.1.13",
-    "@tiptap/extension-placeholder": "2.1.13",
+    "@tiptap/extension-placeholder": "^2.1.16",
     "@tiptap/extension-subscript": "^2.5.4",
     "@tiptap/extension-superscript": "^2.5.4",
-    "@tiptap/extension-table": "^2.2.1",
-    "@tiptap/extension-table-cell": "^2.2.1",
-    "@tiptap/extension-table-header": "^2.2.1",
-    "@tiptap/extension-table-row": "^2.2.1",
-    "@tiptap/extension-task-item": "^2.1.13",
-    "@tiptap/extension-task-list": "^2.1.13",
+    "@tiptap/extension-table": "^2.11.5",
+    "@tiptap/extension-table-cell": "^2.11.5",
+    "@tiptap/extension-table-header": "^2.11.5",
+    "@tiptap/extension-table-row": "^2.11.5",
+    "@tiptap/extension-task-item": "^2.1.16",
+    "@tiptap/extension-task-list": "^2.1.16",
     "@tiptap/extension-text": "^2.1.13",
     "@tiptap/extension-text-style": "^2.11.5",
-    "@tiptap/extension-typography": "^2.8.0",
-    "@tiptap/extension-underline": "^2.1.13",
-    "@tiptap/extensions": "^3.0.7",
-    "@tiptap/pm": "^2.1.13",
-    "@tiptap/react": "^2.4.0",
-    "@tiptap/starter-kit": "^2.1.13",
-    "@tiptap/suggestion": "^2.8.0",
+    "@tiptap/extension-typography": "^2.1.16",
+    "@tiptap/extension-underline": "^2.1.16",
+    "@tiptap/pm": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3",
+    "@tiptap/suggestion": "^2.1.16",
     "@types/d3": "^7.4.3",
     "@types/dompurify": "^3.0.5",
     "@types/mousetrap": "^1.6.15",
