--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -48,7 +48,7 @@ include ':daniele-rolli-capacitor-google-auth'
 project(':daniele-rolli-capacitor-google-auth').projectDir = new File('../node_modules/@daniele-rolli/capacitor-google-auth/android')
 
 include ':daniele-rolli-capacitor-scoped-storage'
-project(':daniele-rolli-capacitor-scoped-storage').projectDir = new File('../../capacitor-scoped-storage/android')
+project(':daniele-rolli-capacitor-scoped-storage').projectDir = new File('../node_modules/@daniele-rolli/capacitor-scoped-storage/android')
 
 include ':recognizebv-capacitor-plugin-msauth'
 project(':recognizebv-capacitor-plugin-msauth').projectDir = new File('../node_modules/@recognizebv/capacitor-plugin-msauth/android')
